--- a/odoo/Custom_addons/app_one/views/base_menu.xml
+++ b/odoo/Custom_addons/app_one/views/base_menu.xml
@@ -8,4 +8,9 @@
     name="Properties"
     parent="real_estate_root_menu"
     />
+    <menuitem
+    id="owner_menu"
+    name="Owners"
+    parent="real_estate_root_menu"
+    />
 </odoo>
