--- a/odoo/Custom_addons/app_one/views/base_menu.xml
+++ b/odoo/Custom_addons/app_one/views/base_menu.xml
@@ -2,6 +2,7 @@
     <menuitem
     id="real_estate_root_menu"
     name="Real Estate"
+    web_icon="app_one,static/description/icon.png"
     />
     <menuitem
     id="properties_menu"
@@ -9,8 +10,8 @@
     parent="real_estate_root_menu"
     />
     <menuitem
-    id="owner_menu"
-    name="Owners"
+    id="configuration_menu"
+    name="Configuration"
     parent="real_estate_root_menu"
     />
 </odoo>
