--- a/odoo/Custom_addons/app_one/views/property_view.xml
+++ b/odoo/Custom_addons/app_one/views/property_view.xml
@@ -3,7 +3,7 @@
         <field name="name">property tree</field>
         <field name="model">property</field>
         <field name="arch" type="xml">
-            <tree multi_edit="True" create="1" edit="1" delete="1">
+            <tree multi_edit="True" create="1" edit="1" delete="1" class="header_custom">
                 <field name="name"/>
                 <field name="description"/>
                 <field name="postcode"/>
@@ -11,9 +11,10 @@
                 <field name="expected_price"/>
                 <field name="selling_price"/>
                 <field name="bedrooms"/>
+                <field name="state"/>
                 <field name="living_area"/>
                 <field name="facades"/>
-                <field name="owner_id"/>
+                <field name="garage"/>
                 <field name="garage" optional="1"/>
                 <field name="garden" optional="1"/>
                 <field name="garden_area" optional="1"/>
@@ -27,6 +28,14 @@
         <field name="arch" type="xml">
             <form create="1" edit="1" delete="1">
                 <sheet>
+                    <header>
+                        <button name="action_draft" type="object" class="btn-primary" string="draft" invisible="state == 'draft'"/>
+                        <button name="action_pending" type="object" class="btn-secondary" string="pending" invisible="state != 'draft'"/>
+                        <button name="action_sold" type="object" class="btn-success" string="sold" invisible="state != 'pending'"/>
+                        <field name="state" widget="statusbar"/>
+<!--                        statusbar_visible="draft,sold"-->
+<!--                        options="{'clickable':1}"-->
+                    </header>
                     <div class="oe_title">
                         <label for="name"/>
                         <h1>
@@ -39,6 +48,7 @@
                             <field name="date_availability"/>
                             <field name="expected_price"/>
                             <field name="selling_price"/>
+                            <field name="diff"/>
                             <field name="description" required="1"/>
                         </group>
                         <group string="ADDITIONAL INFO">
@@ -47,12 +57,31 @@
                             <field name="facades"/>
                             <field name="garage"/>
                             <field name="garden"/>
+                            <field name="state"/>
                             <field name="garden_area"/>
                             <field name="garden_orientation"/>
                             <field name="owner_id"/>
+                            <field name="owner_phone"/>
+                            <field name="owner_address"/>
+                            <field name="tag_ids" widget="many2many_tags"/>
                         </group>
                     </group>
+                    <notebook>
+                        <page string="Bed Rooms">
+                            <field name="lines_ids">
+                                <tree editable="bottom">
+                                    <field name="Description"/>
+                                    <field name="Area"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
