--- a/odoo/Custom_addons/app_one/views/property_view.xml
+++ b/odoo/Custom_addons/app_one/views/property_view.xml
@@ -3,18 +3,21 @@
         <field name="name">property tree</field>
         <field name="model">property</field>
         <field name="arch" type="xml">
-            <tree multi_edit="True" create="1" edit="1" delete="1" class="header_custom">
+            <tree multi_edit="True" create="1" edit="1" delete="1" class="header_custom" decoration-danger="(is_late)">
                 <field name="name"/>
                 <field name="description"/>
                 <field name="postcode"/>
                 <field name="date_availability"/>
                 <field name="expected_price"/>
+                <field name="expected_selling_date"/>
+                <field name="is_late" invisible="1"/>
                 <field name="selling_price"/>
                 <field name="bedrooms"/>
                 <field name="state"/>
                 <field name="living_area"/>
                 <field name="facades"/>
                 <field name="garage"/>
+                <field name="active"/>
                 <field name="garage" optional="1"/>
                 <field name="garden" optional="1"/>
                 <field name="garden_area" optional="1"/>
@@ -29,12 +32,15 @@
             <form create="1" edit="1" delete="1">
                 <sheet>
                     <header>
-                        <button name="action_draft" type="object" class="btn-primary" string="draft" invisible="state == 'draft'"/>
-                        <button name="action_pending" type="object" class="btn-secondary" string="pending" invisible="state != 'draft'"/>
-                        <button name="action_sold" type="object" class="btn-success" string="sold" invisible="state != 'pending'"/>
+                        <button name="action_draft" type="object" class="btn-primary" string="draft"
+                                invisible="state == 'draft'"/>
+                        <button name="action_pending" type="object" class="btn-secondary" string="pending"
+                                invisible="state != 'draft'"/>
+                        <button name="action_sold" type="object" class="btn-success" string="sold"
+                                invisible="state != 'pending'"/>
                         <field name="state" widget="statusbar"/>
-<!--                        statusbar_visible="draft,sold"-->
-<!--                        options="{'clickable':1}"-->
+                        <!--                        statusbar_visible="draft,sold"-->
+                        <!--                        options="{'clickable':1}"-->
                     </header>
                     <div class="oe_title">
                         <label for="name"/>
@@ -47,8 +53,11 @@
                             <field name="postcode" required="1"/>
                             <field name="date_availability"/>
                             <field name="expected_price"/>
+                            <field name="expected_selling_date"/>
+                            <field name="is_late" invisible="1"/>
                             <field name="selling_price"/>
                             <field name="diff"/>
+                            <field name="active"/>
                             <field name="description" required="1"/>
                         </group>
                         <group string="ADDITIONAL INFO">
@@ -85,6 +94,44 @@
             </form>
         </field>
     </record>
+    <record id="property_kanban_view" model="ir.ui.view">
+        <field name="name">Property Kanban View</field>
+        <field name="model">property</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="state">
+                <template>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_box">
+                            <h3 class="h3 text-muted"><field name="name"/></h3>
+                            <h3 class="h3 text-muted"><field name="date_availability"/></h3>
+                            <h3 class="h3 text-muted"><field name="is_late"/></h3>
+                        </div>
+                    </t>
+                </template>
+            </kanban>
+        </field>
+    </record>
+    <record id="property_calender_view" model="ir.ui.view">
+        <field name="name">Property Calender</field>
+        <field name="model">property</field>
+        <field name="arch" type="xml">
+            <calendar date_start="expected_selling_date" color="name">
+                <field name="name"/>
+                <field name="postcode"/>
+            </calendar>
+        </field>
+    </record>
+    <record id="property_graph_view" model="ir.ui.view">
+        <field name="name">Property Graph View</field>
+        <field name="model">property</field>
+        <field name="arch" type="xml">
+            <graph string="Selling Price by date availability" stacked="False" type="line">
+                <field name="name" type="row"/>
+                <field name="date_availability" type="col" interval="month"/>
+                <field name="selling_price" type="measure"/>
+            </graph>
+        </field>
+    </record>
     <record id="property_search_view" model="ir.ui.view">
         <field name="name">property search</field>
         <field name="model">property</field>
@@ -101,6 +148,26 @@
     <record id="property_action" model="ir.actions.act_window">
         <field name="name">property</field>
         <field name="res_model">property</field>
+        <field name="view_mode">tree,form,kanban,calendar,graph</field>
+    </record>
+    <record id="property_closed_server_action" model="ir.actions.server">
+        <field name="name">Closed</field>
+        <field name="model_id" ref="model_property"/>
+        <field name="binding_model_id" ref="model_property"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = records.action_close()
+        </field>
+    </record>
+    <record id="check_selling_date_cron" model="ir.cron">
+        <field name="name">Property: Check Selling Date</field>
+        <field name="model_id" ref="model_property"/>
+        <field name="state">code</field>
+        <field name="code">model.check_expected_selling_date()</field>
+        <field name="interval_number">1</field>
+        <field name="interval_type">days</field>
+        <field name="numbercall">-1</field>
+        <field name="active">True</field>
     </record>
     <menuitem
             id="property_menu_item"
