--- a/odoo/Custom_addons/app_one/views/property_view.xml
+++ b/odoo/Custom_addons/app_one/views/property_view.xml
@@ -33,46 +33,51 @@
                 <sheet>
                     <header>
                         <button name="action_draft" type="object" class="btn-primary" string="draft"
-                                invisible="state == 'draft'"/>
+                                invisible="state in ('draft','closed')"/>
                         <button name="action_pending" type="object" class="btn-secondary" string="pending"
                                 invisible="state != 'draft'"/>
                         <button name="action_sold" type="object" class="btn-success" string="sold"
                                 invisible="state != 'pending'"/>
+                        <button name="change_open_state_wizard" type="object" class="btn-primary" string="Active State" invisible="state != 'closed'"/>
                         <field name="state" widget="statusbar"/>
                         <!--                        statusbar_visible="draft,sold"-->
                         <!--                        options="{'clickable':1}"-->
                     </header>
                     <div class="oe_title">
-                        <label for="name"/>
+                        <label for="ref"/>
                         <h1>
-                            <field name="name"/>
+                            <field name="ref"/>
                         </h1>
+                        <label for="name"/>
+                        <h3>
+                            <field name="name" readonly="state == 'closed'"/>
+                        </h3>
                     </div>
                     <group>
                         <group string="INFO">
-                            <field name="postcode" required="1"/>
-                            <field name="date_availability"/>
-                            <field name="expected_price"/>
-                            <field name="expected_selling_date"/>
-                            <field name="is_late" invisible="1"/>
-                            <field name="selling_price"/>
-                            <field name="diff"/>
-                            <field name="active"/>
-                            <field name="description" required="1"/>
+                            <field name="postcode" required="1" readonly="state == 'closed'"/>
+                            <field name="date_availability" readonly="state == 'closed'"/>
+                            <field name="expected_price" readonly="state == 'closed'"/>
+                            <field name="expected_selling_date" readonly="state == 'closed'"/>
+                            <field name="is_late" invisible="1" readonly="state == 'closed'"/>
+                            <field name="selling_price" readonly="state == 'closed'"/>
+                            <field name="diff" readonly="state == 'closed'"/>
+                            <field name="active" readonly="state == 'closed'"/>
+                            <field name="description" required="1" readonly="state == 'closed'"/>
                         </group>
                         <group string="ADDITIONAL INFO">
-                            <field name="bedrooms"/>
-                            <field name="living_area"/>
-                            <field name="facades"/>
-                            <field name="garage"/>
-                            <field name="garden"/>
-                            <field name="state"/>
-                            <field name="garden_area"/>
-                            <field name="garden_orientation"/>
-                            <field name="owner_id"/>
-                            <field name="owner_phone"/>
-                            <field name="owner_address"/>
-                            <field name="tag_ids" widget="many2many_tags"/>
+                            <field name="bedrooms" readonly="state == 'closed'"/>
+                            <field name="living_area" readonly="state == 'closed'"/>
+                            <field name="facades" readonly="state == 'closed'"/>
+                            <field name="garage" readonly="state == 'closed'"/>
+                            <field name="garden" readonly="state == 'closed'"/>
+                            <field name="state" readonly="state == 'closed'"/>
+                            <field name="garden_area" readonly="state == 'closed'"/>
+                            <field name="garden_orientation" readonly="state == 'closed'"/>
+                            <field name="owner_id" readonly="state == 'closed'"/>
+                            <field name="owner_phone" readonly="state == 'closed'"/>
+                            <field name="owner_address" readonly="state == 'closed'"/>
+                            <field name="tag_ids" widget="many2many_tags" readonly="state == 'closed'"/>
                         </group>
                     </group>
                     <notebook>
@@ -102,9 +107,15 @@
                 <template>
                     <t t-name="kanban-box">
                         <div class="oe_kanban_global_box">
-                            <h3 class="h3 text-muted"><field name="name"/></h3>
-                            <h3 class="h3 text-muted"><field name="date_availability"/></h3>
-                            <h3 class="h3 text-muted"><field name="is_late"/></h3>
+                            <h3 class="h3 text-muted">
+                                <field name="name"/>
+                            </h3>
+                            <h3 class="h3 text-muted">
+                                <field name="date_availability"/>
+                            </h3>
+                            <h3 class="h3 text-muted">
+                                <field name="is_late"/>
+                            </h3>
                         </div>
                     </t>
                 </template>
@@ -157,6 +168,16 @@
         <field name="state">code</field>
         <field name="code">
             action = records.action_close()
+        </field>
+    </record>
+
+    <record id="property_change_state_action" model="ir.actions.server">
+        <field name="name">Open Change State</field>
+        <field name="model_id" ref="model_property"/>
+        <field name="binding_model_id" ref="model_property"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = records.change_open_state_wizard()
         </field>
     </record>
     <record id="check_selling_date_cron" model="ir.cron">
